# Cosserat

./: .clang-format  .gitignore  CMakeLists.txt  CosseratConfig.cmake.in  CosseratPluginConfig.cmake.in  HOOKESERAT_MAPPING_IMPROVEMENTS_PLAN.md  README.md  README.txt  analyse_differentiabilite_liegroups.md  build_autodiff_examples.sh  liegroups_binding_plan.md  q  requirements.txt  sonar-project.properties  tasks.md  test_cosserat_bindings.py  test_extended_liegroups.py  test_lie_groups.cpp  test_phase2_implementation.cpp  test_reorganization.py  test_sim3_standalone.cpp  test_tangent_exp_comparison.cpp  ubuntu_builder_20.04.dockerfile
Tests/: CMakeLists.txt  Example.h  PYTHON_BINDINGS_TEST_SUMMARY.md  README_Python_Tests.md
Tests/constraint/: CMakeLists.txt  ClassName.h  Constraint.h  ConstraintTest.cpp  CosseratUnilateralInteractionConstraintTest.cpp  first-test.cpp
Tests/forcefield/: BeamHookeLawForceFieldTest.cpp
Tests/liegroups/: LieGroupBenchmark.cpp  LieGroupIntegrationTest.cpp  SE23Test.cpp  SO3Test.cpp
Tests/mapping/: DiscretCosseratMappingTest.cpp  POEMapping_test2.pyscn
build_autodiff_standalone/: CMakeLists.txt  Makefile
examples/: CMakeLists.txt  OPTIMIZATION_DEBUG_NOTES.md  PCS_Example1.py  PCS_Example2.py  PCS_Example3.py  __init__.py  autodiff_forward_mode.cpp  autodiff_reverse_mode.cpp  compile_and_run.sh  ilqr_trajectory_tracking.cpp  parameter_calibration  parameter_calibration.cpp  simple_trajectory_optimization  simple_trajectory_optimization.cpp  test_gradients  test_gradients.cpp
examples/advanced/: edit_frames.py  geo_cable_driven_cosserat_beam.py  tuto_1_6dofs.py
examples/basic/: controller.py
examples/basic/scene_quentin/: controller.py  main_fullCosserat.py  main_fullCosserat_3dofs_onlyForce.py  main_fullCosserat_6dofs.py
examples/benchmarks/: tuto_compare_2.py
examples/liegroups/: example_sola_operators.cpp  example_uncertainty_propagation.cpp
examples/python3/: CosseratBeamFallingUnderTheEffectOfGravity.py  NeedleInsertion-predefinedPath.py  NeedleInsertion.py  PCS_Example1.py  PCS_Example2.py  PCS_Example3.py  PNLS_Example1.py  PNLS_Example2.py  PNLS_Example3.py  __init__.py  advanced_state_estimation_example.py  example1.py  hookeserat_controller.py  hookeserat_lie_groups_example.py  lie_groups_complete_example.py  lie_groups_example.py  multi_section_beam_example.py  performance_optimization_example.py  phase2_advanced_features_example.py  phase4_advanced_lie_ml_example.py  se23_example.py  tasks.md
examples/python3/actuators/: __init__.py  cable.json  cable.py  controler.py  example1.py  fingerActuation.py  step1.py  step3.py  step4.py  utils.py
examples/python3/cosserat/: CosseratBase.py  CosseratPrefab.py  __init__.py  cosserat-tuto.html  cosseratObject.py  createFemRegularGrid.py  nonLinearCosserat.py  test3.py  usefulFunctions.py  utils.py
examples/python3/docs/: useful_tasks.md
examples/python3/tutorial/: scene_w9991.py  tuto-2.py  tuto.py  tutorial.md
examples/python3/useful/: __init__.py  __initi__.py  compute_logmap.py  compute_rotation_matrix.py  geometry.py  header.py  old_params.py  params.py  params.py.back  params_v2.py  test_rotation_matrix.py  utils.py
examples/python3/wip/: PCS_Example3.py  completDirectNeedleInsertion.py  needleInteractionTest.py
python/Binding/: CMakeLists.txt
python/Binding/Cosserat/: CMakeLists.txt
python/Binding/LieGroups/: Binding_LieGroups.h  CMakeLists.txt
src/Cosserat/: CMakeLists.txt  config.h.in  fwd.h  initCosserat.cpp  initCosserat.h.in  initCosseratPlugin.cpp  tasks.md  types.h
src/Cosserat/Binding/: Binding_LieGroups.cpp  Binding_PointsManager.cpp  CMakeLists.txt  Module_Cosserat.cpp  testScene.py
src/Cosserat/Bindings/: Binding_PointManager.cpp  Binding_PointManager.h  CMakeLists.txt
src/Cosserat/CosseratPlugin/: CMakeLists.txt  initCosseratPlugin.cpp
src/Cosserat/constraint/: CosseratActuatorConstraint.cpp  CosseratActuatorConstraint.h  CosseratActuatorConstraint.inl  CosseratNeedleSlidingConstraint.cpp  CosseratNeedleSlidingConstraint.h  CosseratNeedleSlidingConstraint.inl  CosseratSlidingConstraint.cpp  CosseratSlidingConstraint.h  CosseratSlidingConstraint.inl  DrawTrianglesComponent.h  DrawTrianglesComponent.inl  QPSlidingConstraint.cpp  QPSlidingConstraint.h  QPSlidingConstraint.inl  README.md
src/Cosserat/engine/: CosseratState.h  PointsManager.cpp  PointsManager.h  PointsManager.inl  ProjectionEngine.cpp  ProjectionEngine.h  ProjectionEngine.inl  README.md
src/Cosserat/forcefield/: BeamHookeLawForceField.cpp  BeamHookeLawForceField.h  BeamHookeLawForceField.inl  BeamHookeLawForceFieldRigid.cpp  BeamHookeLawForceFieldRigid.h  BeamHookeLawForceFieldRigid.inl  CosseratInternalActuation.cpp  CosseratInternalActuation.h  CosseratInternalActuation.inl  MyUniformVelocityDampingForceField.cpp  MyUniformVelocityDampingForceField.h  MyUniformVelocityDampingForceField.inl  README.md  maintain.sh
src/Cosserat/liegroups/: Bundle.h  LieGroupBase.h  LieGroupBase.inl  Readme.md  RealSpace.h  SE2.h  SE23.h  SE23.inl  SE3.h  SE3.inl  SGal3.h  SGal3.inl  SO2.h  SO3.h  SO3.inl  Types.h  Utils.h
src/Cosserat/mapping/: BaseCosserat.cpp  BaseCosserat.h  BaseCosserat.inl  BaseCosseratMapping.cpp  BaseCosseratMapping.h  BaseCosseratMapping.inl  (+42 more)
src/CosseratPlugin/: CMakeLists.txt  config.h.in
tests/: CMakeLists.txt  PYTHON_BINDINGS_TEST_SUMMARY.md  STEP1_JACOBIAN_VERIFICATION.md  TestTutorialsScenes.py  run_python_tests.py  test_jacobian_verification.cpp
tests/Cosserat.Binding.Tests/: CMakeLists.txt
tests/Cosserat.Core.Tests/: CMakeLists.txt
tests/Cosserat.Scene.Tests/: CMakeLists.txt  Cosserat_Python_Tests.cpp
tests/integration/: HookeSeratIntegrationTest.cpp
tests/mapping/: DiscretCosseratMappingTest.cpp  POEMappingTest.cpp
tests/unit/: BundleTest.cpp  ClassName.h  CosseratUnilateralInteractionConstraintTest.cpp  Example.cpp  Example.h  HookeSeratBaseMappingTest.cpp  HookeSeratDiscretMappingTest.cpp  HookeSeratEquivalenceTest.cpp  SE3Test.cpp  SGal3Test.cpp  SO2Test.cpp  Strain2RigidCosseratMappingTest.cpp  test_cosserat_bindings.py
(+661 files in other folders)
